flexon.output
Terminals which are not used

   Then
   Newline


Grammar

    0 $accept: program $end

    1 program: Mainprog ID ';' declarations subprogram_declarations compound_statement

    2 declarations: /* empty */
    3             | type identifier_list ';' declarations

    4 identifier_list: ID
    5                | ID ',' identifier_list

    6 type: standard_type
    7     | standard_type '[' Integer ']'

    8 standard_type: IntType
    9              | FloatType

   10 subprogram_declarations: /* empty */
   11                        | subprogram_declaration subprogram_declarations

   12 subprogram_declaration: subprogram_head declarations compound_statement

   13 subprogram_head: Function ID arguments ':' standard_type ';'
   14                | Procedure ID arguments ';'

   15 arguments: /* empty */
   16          | '(' parameter_list ')'

   17 parameter_list: identifier_list ':' type
   18               | identifier_list ':' type ';' parameter_list

   19 compound_statement: Begin statement_list End

   20 statement_list: statement
   21               | statement ';' statement_list

   22 statement: variable '=' expression
   23          | print_statement
   24          | procedure_statement
   25          | compound_statement
   26          | if_statement
   27          | while_statement
   28          | for_statement
   29          | Return expression
   30          | Nop

   31 if_statement: If expression ':' statement elif_statement

   32 elif_statement: /* empty */
   33               | else_statement
   34               | Elif expression ':' statement elif_statement

   35 else_statement: Else ':' statement

   36 while_statement: While expression ':' statement
   37                | While expression ':' statement else_statement

   38 for_statement: For expression In expression ':' statement
   39              | For expression In expression ':' statement else_statement

   40 print_statement: Print
   41                | Print '(' expression ')'

   42 variable: ID
   43         | ID '[' expression ']'

   44 procedure_statement: ID '(' actual_parameter_expression ')'

   45 actual_parameter_expression: /* empty */
   46                            | expression_list

   47 expression_list: expression
   48                | expression ',' expression_list

   49 expression: simple_expression
   50           | simple_expression relop simple_expression

   51 simple_expression: term
   52                  | term addop simple_expression

   53 term: factor
   54     | factor multop term

   55 factor: Integer
   56       | Float
   57       | variable
   58       | procedure_statement
   59       | '!' factor
   60       | sign factor

   61 sign: '+'
   62     | '-'

   63 relop: Comparator
   64      | In

   65 addop: '+'
   66      | '-'

   67 multop: '*'
   68       | '/'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 59
'(' (40) 16 41 44
')' (41) 16 41 44
'*' (42) 67
'+' (43) 61 65
',' (44) 5 48
'-' (45) 62 66
'/' (47) 68
':' (58) 13 17 18 31 34 35 36 37 38 39
';' (59) 1 3 13 14 18 21
'=' (61) 22
'[' (91) 7 43
']' (93) 7 43
error (256)
Mainprog (258) 1
Function (259) 13
Procedure (260) 14
Begin (261) 19
End (262) 19
If (263) 31
Then (264)
Else (265) 35
Nop (266) 30
While (267) 36 37
Return (268) 29
Print (269) 40 41
In (270) 38 39 64
For (271) 38 39
Elif (272) 34
IntType (273) 8
FloatType (274) 9
Integer (275) 7 55
Float (276) 56
Comparator (277) 63
Newline (278)
ID (279) 1 4 5 13 14 42 43 44
NO_ELSE (280)
NO_RELOP (281)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1, on right: 0
declarations (42)
    on left: 2 3, on right: 1 3 12
identifier_list (43)
    on left: 4 5, on right: 3 5 17 18
type (44)
    on left: 6 7, on right: 3 17 18
standard_type (45)
    on left: 8 9, on right: 6 7 13
subprogram_declarations (46)
    on left: 10 11, on right: 1 11
subprogram_declaration (47)
    on left: 12, on right: 11
subprogram_head (48)
    on left: 13 14, on right: 12
arguments (49)
    on left: 15 16, on right: 13 14
parameter_list (50)
    on left: 17 18, on right: 16 18
compound_statement (51)
    on left: 19, on right: 1 12 25
statement_list (52)
    on left: 20 21, on right: 19 21
statement (53)
    on left: 22 23 24 25 26 27 28 29 30, on right: 20 21 31 34 35 36
    37 38 39
if_statement (54)
    on left: 31, on right: 26
elif_statement (55)
    on left: 32 33 34, on right: 31 34
else_statement (56)
    on left: 35, on right: 33 37 39
while_statement (57)
    on left: 36 37, on right: 27
for_statement (58)
    on left: 38 39, on right: 28
print_statement (59)
    on left: 40 41, on right: 23
variable (60)
    on left: 42 43, on right: 22 57
procedure_statement (61)
    on left: 44, on right: 24 58
actual_parameter_expression (62)
    on left: 45 46, on right: 44
expression_list (63)
    on left: 47 48, on right: 46 48
expression (64)
    on left: 49 50, on right: 22 29 31 34 36 37 38 39 41 43 47 48
simple_expression (65)
    on left: 51 52, on right: 49 50 52
term (66)
    on left: 53 54, on right: 51 52 54
factor (67)
    on left: 55 56 57 58 59 60, on right: 53 54 59 60
sign (68)
    on left: 61 62, on right: 60
relop (69)
    on left: 63 64, on right: 50
addop (70)
    on left: 65 66, on right: 52
multop (71)
    on left: 67 68, on right: 54


state 0

    0 $accept: . program $end

    Mainprog  shift, and go to state 1

    program  go to state 2


state 1

    1 program: Mainprog . ID ';' declarations subprogram_declarations compound_statement

    ID  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: Mainprog ID . ';' declarations subprogram_declarations compound_statement

    ';'  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: Mainprog ID ';' . declarations subprogram_declarations compound_statement

    IntType    shift, and go to state 6
    FloatType  shift, and go to state 7

    $default  reduce using rule 2 (declarations)

    declarations   go to state 8
    type           go to state 9
    standard_type  go to state 10


state 6

    8 standard_type: IntType .

    $default  reduce using rule 8 (standard_type)


state 7

    9 standard_type: FloatType .

    $default  reduce using rule 9 (standard_type)


state 8

    1 program: Mainprog ID ';' declarations . subprogram_declarations compound_statement

    Function   shift, and go to state 11
    Procedure  shift, and go to state 12

    $default  reduce using rule 10 (subprogram_declarations)

    subprogram_declarations  go to state 13
    subprogram_declaration   go to state 14
    subprogram_head          go to state 15


state 9

    3 declarations: type . identifier_list ';' declarations

    ID  shift, and go to state 16

    identifier_list  go to state 17


state 10

    6 type: standard_type .
    7     | standard_type . '[' Integer ']'

    '['  shift, and go to state 18

    $default  reduce using rule 6 (type)


state 11

   13 subprogram_head: Function . ID arguments ':' standard_type ';'

    ID  shift, and go to state 19


state 12

   14 subprogram_head: Procedure . ID arguments ';'

    ID  shift, and go to state 20


state 13

    1 program: Mainprog ID ';' declarations subprogram_declarations . compound_statement

    Begin  shift, and go to state 21

    compound_statement  go to state 22


state 14

   11 subprogram_declarations: subprogram_declaration . subprogram_declarations

    Function   shift, and go to state 11
    Procedure  shift, and go to state 12

    $default  reduce using rule 10 (subprogram_declarations)

    subprogram_declarations  go to state 23
    subprogram_declaration   go to state 14
    subprogram_head          go to state 15


state 15

   12 subprogram_declaration: subprogram_head . declarations compound_statement

    IntType    shift, and go to state 6
    FloatType  shift, and go to state 7

    $default  reduce using rule 2 (declarations)

    declarations   go to state 24
    type           go to state 9
    standard_type  go to state 10


state 16

    4 identifier_list: ID .
    5                | ID . ',' identifier_list

    ','  shift, and go to state 25

    $default  reduce using rule 4 (identifier_list)


state 17

    3 declarations: type identifier_list . ';' declarations

    ';'  shift, and go to state 26


state 18

    7 type: standard_type '[' . Integer ']'

    Integer  shift, and go to state 27


state 19

   13 subprogram_head: Function ID . arguments ':' standard_type ';'

    '('  shift, and go to state 28

    $default  reduce using rule 15 (arguments)

    arguments  go to state 29


state 20

   14 subprogram_head: Procedure ID . arguments ';'

    '('  shift, and go to state 28

    $default  reduce using rule 15 (arguments)

    arguments  go to state 30


state 21

   19 compound_statement: Begin . statement_list End

    Begin   shift, and go to state 21
    If      shift, and go to state 31
    Nop     shift, and go to state 32
    While   shift, and go to state 33
    Return  shift, and go to state 34
    Print   shift, and go to state 35
    For     shift, and go to state 36
    ID      shift, and go to state 37

    compound_statement   go to state 38
    statement_list       go to state 39
    statement            go to state 40
    if_statement         go to state 41
    while_statement      go to state 42
    for_statement        go to state 43
    print_statement      go to state 44
    variable             go to state 45
    procedure_statement  go to state 46


state 22

    1 program: Mainprog ID ';' declarations subprogram_declarations compound_statement .

    $default  reduce using rule 1 (program)


state 23

   11 subprogram_declarations: subprogram_declaration subprogram_declarations .

    $default  reduce using rule 11 (subprogram_declarations)


state 24

   12 subprogram_declaration: subprogram_head declarations . compound_statement

    Begin  shift, and go to state 21

    compound_statement  go to state 47


state 25

    5 identifier_list: ID ',' . identifier_list

    ID  shift, and go to state 16

    identifier_list  go to state 48


state 26

    3 declarations: type identifier_list ';' . declarations

    IntType    shift, and go to state 6
    FloatType  shift, and go to state 7

    $default  reduce using rule 2 (declarations)

    declarations   go to state 49
    type           go to state 9
    standard_type  go to state 10


state 27

    7 type: standard_type '[' Integer . ']'

    ']'  shift, and go to state 50


state 28

   16 arguments: '(' . parameter_list ')'

    ID  shift, and go to state 16

    identifier_list  go to state 51
    parameter_list   go to state 52


state 29

   13 subprogram_head: Function ID arguments . ':' standard_type ';'

    ':'  shift, and go to state 53


state 30

   14 subprogram_head: Procedure ID arguments . ';'

    ';'  shift, and go to state 54


state 31

   31 if_statement: If . expression ':' statement elif_statement

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression           go to state 62
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 32

   30 statement: Nop .

    $default  reduce using rule 30 (statement)


state 33

   36 while_statement: While . expression ':' statement
   37                | While . expression ':' statement else_statement

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression           go to state 67
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 34

   29 statement: Return . expression

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression           go to state 68
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 35

   40 print_statement: Print .
   41                | Print . '(' expression ')'

    '('  shift, and go to state 69

    $default  reduce using rule 40 (print_statement)


state 36

   38 for_statement: For . expression In expression ':' statement
   39              | For . expression In expression ':' statement else_statement

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression           go to state 70
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 37

   42 variable: ID .
   43         | ID . '[' expression ']'
   44 procedure_statement: ID . '(' actual_parameter_expression ')'

    '['  shift, and go to state 71
    '('  shift, and go to state 72

    $default  reduce using rule 42 (variable)


state 38

   25 statement: compound_statement .

    $default  reduce using rule 25 (statement)


state 39

   19 compound_statement: Begin statement_list . End

    End  shift, and go to state 73


state 40

   20 statement_list: statement .
   21               | statement . ';' statement_list

    ';'  shift, and go to state 74

    $default  reduce using rule 20 (statement_list)


state 41

   26 statement: if_statement .

    $default  reduce using rule 26 (statement)


state 42

   27 statement: while_statement .

    $default  reduce using rule 27 (statement)


state 43

   28 statement: for_statement .

    $default  reduce using rule 28 (statement)


state 44

   23 statement: print_statement .

    $default  reduce using rule 23 (statement)


state 45

   22 statement: variable . '=' expression

    '='  shift, and go to state 75


state 46

   24 statement: procedure_statement .

    $default  reduce using rule 24 (statement)


state 47

   12 subprogram_declaration: subprogram_head declarations compound_statement .

    $default  reduce using rule 12 (subprogram_declaration)


state 48

    5 identifier_list: ID ',' identifier_list .

    $default  reduce using rule 5 (identifier_list)


state 49

    3 declarations: type identifier_list ';' declarations .

    $default  reduce using rule 3 (declarations)


state 50

    7 type: standard_type '[' Integer ']' .

    $default  reduce using rule 7 (type)


state 51

   17 parameter_list: identifier_list . ':' type
   18               | identifier_list . ':' type ';' parameter_list

    ':'  shift, and go to state 76


state 52

   16 arguments: '(' parameter_list . ')'

    ')'  shift, and go to state 77


state 53

   13 subprogram_head: Function ID arguments ':' . standard_type ';'

    IntType    shift, and go to state 6
    FloatType  shift, and go to state 7

    standard_type  go to state 78


state 54

   14 subprogram_head: Procedure ID arguments ';' .

    $default  reduce using rule 14 (subprogram_head)


state 55

   55 factor: Integer .

    $default  reduce using rule 55 (factor)


state 56

   56 factor: Float .

    $default  reduce using rule 56 (factor)


state 57

   61 sign: '+' .

    $default  reduce using rule 61 (sign)


state 58

   62 sign: '-' .

    $default  reduce using rule 62 (sign)


state 59

   59 factor: '!' . factor

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    factor               go to state 79
    sign                 go to state 66


state 60

   57 factor: variable .

    $default  reduce using rule 57 (factor)


state 61

   58 factor: procedure_statement .

    $default  reduce using rule 58 (factor)


state 62

   31 if_statement: If expression . ':' statement elif_statement

    ':'  shift, and go to state 80


state 63

   49 expression: simple_expression .
   50           | simple_expression . relop simple_expression

    Comparator  shift, and go to state 82

    $default  reduce using rule 49 (expression)

    relop  go to state 83


state 64

   51 simple_expression: term .
   52                  | term . addop simple_expression

    '+'  shift, and go to state 84
    '-'  shift, and go to state 85

    $default  reduce using rule 51 (simple_expression)

    addop  go to state 86


state 65

   53 term: factor .
   54     | factor . multop term

    '*'  shift, and go to state 87
    '/'  shift, and go to state 88

    $default  reduce using rule 53 (term)

    multop  go to state 89


state 66

   60 factor: sign . factor

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    factor               go to state 90
    sign                 go to state 66


state 67

   36 while_statement: While expression . ':' statement
   37                | While expression . ':' statement else_statement

    ':'  shift, and go to state 91


state 68

   29 statement: Return expression .

    $default  reduce using rule 29 (statement)


state 69

   41 print_statement: Print '(' . expression ')'

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression           go to state 92
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 70

   38 for_statement: For expression . In expression ':' statement
   39              | For expression . In expression ':' statement else_statement

    In  shift, and go to state 93


state 71

   43 variable: ID '[' . expression ']'

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression           go to state 94
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 72

   44 procedure_statement: ID '(' . actual_parameter_expression ')'

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    $default  reduce using rule 45 (actual_parameter_expression)

    variable                     go to state 60
    procedure_statement          go to state 61
    actual_parameter_expression  go to state 95
    expression_list              go to state 96
    expression                   go to state 97
    simple_expression            go to state 63
    term                         go to state 64
    factor                       go to state 65
    sign                         go to state 66


state 73

   19 compound_statement: Begin statement_list End .

    $default  reduce using rule 19 (compound_statement)


state 74

   21 statement_list: statement ';' . statement_list

    Begin   shift, and go to state 21
    If      shift, and go to state 31
    Nop     shift, and go to state 32
    While   shift, and go to state 33
    Return  shift, and go to state 34
    Print   shift, and go to state 35
    For     shift, and go to state 36
    ID      shift, and go to state 37

    compound_statement   go to state 38
    statement_list       go to state 98
    statement            go to state 40
    if_statement         go to state 41
    while_statement      go to state 42
    for_statement        go to state 43
    print_statement      go to state 44
    variable             go to state 45
    procedure_statement  go to state 46


state 75

   22 statement: variable '=' . expression

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression           go to state 99
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 76

   17 parameter_list: identifier_list ':' . type
   18               | identifier_list ':' . type ';' parameter_list

    IntType    shift, and go to state 6
    FloatType  shift, and go to state 7

    type           go to state 100
    standard_type  go to state 10


state 77

   16 arguments: '(' parameter_list ')' .

    $default  reduce using rule 16 (arguments)


state 78

   13 subprogram_head: Function ID arguments ':' standard_type . ';'

    ';'  shift, and go to state 101


state 79

   59 factor: '!' factor .

    $default  reduce using rule 59 (factor)


state 80

   31 if_statement: If expression ':' . statement elif_statement

    Begin   shift, and go to state 21
    If      shift, and go to state 31
    Nop     shift, and go to state 32
    While   shift, and go to state 33
    Return  shift, and go to state 34
    Print   shift, and go to state 35
    For     shift, and go to state 36
    ID      shift, and go to state 37

    compound_statement   go to state 38
    statement            go to state 102
    if_statement         go to state 41
    while_statement      go to state 42
    for_statement        go to state 43
    print_statement      go to state 44
    variable             go to state 45
    procedure_statement  go to state 46


state 81

   64 relop: In .

    $default  reduce using rule 64 (relop)


state 82

   63 relop: Comparator .

    $default  reduce using rule 63 (relop)


state 83

   50 expression: simple_expression relop . simple_expression

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    simple_expression    go to state 103
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 84

   65 addop: '+' .

    $default  reduce using rule 65 (addop)


state 85

   66 addop: '-' .

    $default  reduce using rule 66 (addop)


state 86

   52 simple_expression: term addop . simple_expression

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    simple_expression    go to state 104
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 87

   67 multop: '*' .

    $default  reduce using rule 67 (multop)


state 88

   68 multop: '/' .

    $default  reduce using rule 68 (multop)


state 89

   54 term: factor multop . term

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    term                 go to state 105
    factor               go to state 65
    sign                 go to state 66


state 90

   60 factor: sign factor .

    $default  reduce using rule 60 (factor)


state 91

   36 while_statement: While expression ':' . statement
   37                | While expression ':' . statement else_statement

    Begin   shift, and go to state 21
    If      shift, and go to state 31
    Nop     shift, and go to state 32
    While   shift, and go to state 33
    Return  shift, and go to state 34
    Print   shift, and go to state 35
    For     shift, and go to state 36
    ID      shift, and go to state 37

    compound_statement   go to state 38
    statement            go to state 106
    if_statement         go to state 41
    while_statement      go to state 42
    for_statement        go to state 43
    print_statement      go to state 44
    variable             go to state 45
    procedure_statement  go to state 46


state 92

   41 print_statement: Print '(' expression . ')'

    ')'  shift, and go to state 107


state 93

   38 for_statement: For expression In . expression ':' statement
   39              | For expression In . expression ':' statement else_statement

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression           go to state 108
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 94

   43 variable: ID '[' expression . ']'

    ']'  shift, and go to state 109


state 95

   44 procedure_statement: ID '(' actual_parameter_expression . ')'

    ')'  shift, and go to state 110


state 96

   46 actual_parameter_expression: expression_list .

    $default  reduce using rule 46 (actual_parameter_expression)


state 97

   47 expression_list: expression .
   48                | expression . ',' expression_list

    ','  shift, and go to state 111

    $default  reduce using rule 47 (expression_list)


state 98

   21 statement_list: statement ';' statement_list .

    $default  reduce using rule 21 (statement_list)


state 99

   22 statement: variable '=' expression .

    $default  reduce using rule 22 (statement)


state 100

   17 parameter_list: identifier_list ':' type .
   18               | identifier_list ':' type . ';' parameter_list

    ';'  shift, and go to state 112

    $default  reduce using rule 17 (parameter_list)


state 101

   13 subprogram_head: Function ID arguments ':' standard_type ';' .

    $default  reduce using rule 13 (subprogram_head)


state 102

   31 if_statement: If expression ':' statement . elif_statement

    Else  shift, and go to state 113
    Elif  shift, and go to state 114

    $default  reduce using rule 32 (elif_statement)

    elif_statement  go to state 115
    else_statement  go to state 116


state 103

   50 expression: simple_expression relop simple_expression .

    $default  reduce using rule 50 (expression)


state 104

   52 simple_expression: term addop simple_expression .

    $default  reduce using rule 52 (simple_expression)


state 105

   54 term: factor multop term .

    $default  reduce using rule 54 (term)


state 106

   36 while_statement: While expression ':' statement .
   37                | While expression ':' statement . else_statement

    Else  shift, and go to state 113

    $default  reduce using rule 36 (while_statement)

    else_statement  go to state 117


state 107

   41 print_statement: Print '(' expression ')' .

    $default  reduce using rule 41 (print_statement)


state 108

   38 for_statement: For expression In expression . ':' statement
   39              | For expression In expression . ':' statement else_statement

    ':'  shift, and go to state 118


state 109

   43 variable: ID '[' expression ']' .

    $default  reduce using rule 43 (variable)


state 110

   44 procedure_statement: ID '(' actual_parameter_expression ')' .

    $default  reduce using rule 44 (procedure_statement)


state 111

   48 expression_list: expression ',' . expression_list

    Integer  shift, and go to state 55
    Float    shift, and go to state 56
    ID       shift, and go to state 37
    '+'      shift, and go to state 57
    '-'      shift, and go to state 58
    '!'      shift, and go to state 59

    variable             go to state 60
    procedure_statement  go to state 61
    expression_list      go to state 119
    expression           go to state 97
    simple_expression    go to state 63
    term                 go to state 64
    factor               go to state 65
    sign                 go to state 66


state 112

   18 parameter_list: identifier_list ':' type ';' . parameter_list

    ID  shift, and go to state 16
